[package]
name = "pinocchio-token-program"
description = "Simple token interaction program"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pinocchio = { version = "0.10.1", features = ["alloc"] }
solana-program-log = "1.1.0"
solana-program-error = "3.0.0"
solana-program = "2.1"

[features]
no-entrypoint = []
