[package]
name = "pinocchio-token-program"
description = "Pinocchio helpers to invoke Token program instructions"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pinocchio = { version = "0.10.1", features = ["alloc", "cpi"] }
solana-account-view = "1.0"
solana-address = { version = "2.0", features = ["decode"] }
solana-instruction-view = { version = "1.0", features = ["cpi"] }
solana-program-log = "1.1.0"
solana-program-error = "3.0.0"
solana-program = "=1.17.0"
constant_time_eq = "=0.3.1"

[features]
no-entrypoint = []
